<resources>
    <string name="app_name">CurrencyMaster</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_creating_an_account_i_accept_privacy_policy_and_legal_terms">By creating an account. I accept Privacy Policy and Legal Terms.</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="gold_prices">Gold Prices</string>
    <string name="converter">Converter</string>
    <string name="usd">%1$s/USD</string>
    <string name="sign_out">Sign Out</string>
    <string name="base_to_currency">%1$s%2$s</string>
    <string name="usd_us_dollar">USD \nUS Dollar</string>
    <string name="try_turkish_lira">TRY \nTurkish Lira</string>
    <string name="fom_to">%1$s \n%2$s</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="try_nturkish_lira">TRY \nTurkish Lira</string>
    <string name="usd_nus_dollar">USD \nUS Dollar</string>
    <string name="email_dots">email..</string>
    <string name="password_dots">password..</string>
    <string name="full_name_dots">full name..</string>
    <string name="confirm_password_dots">confirm password..</string>
    <string name="login_to_you_account">Login to you account</string>
    <string name="currency_to_usd">%1$s/USD</string>
</resources>