<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item1"
        android:icon="@drawable/ic_currency"
        android:title="@string/exchange_rates" />

    <item
        android:id="@+id/menu_item2"
        android:icon="@drawable/ic_gold"
        android:title="@string/gold_prices"
        app:iconTint="@color/white"
        app:titleTextColor="@color/white" />

    <item
        android:id="@+id/menu_item3"
        android:icon="@drawable/ic_converter"
        android:title="@string/converter" />

    <item
        android:id="@+id/menu_item4"
        android:icon="@drawable/ic_converter"
        android:title="@string/sign_out" />
</menu>
